Fix main-app scrollbar

--- a/src/components/macro/edit/macro-edit.component.scss
+++ b/src/components/macro/edit/macro-edit.component.scss
@@ -1,3 +1,9 @@
+:host {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
 .not-found {
     margin-top: 30px;
     font-size: 16px;
